# tei

./: .editorconfig  .env  README.md  dev-setup.sh  dev-up.sh  docker-compose.yml  start-all.sh
.github/: .editorconfig
.github/workflows/: server.yaml
client/tei-web/: package-lock.json  package.json
client/tei-web/src/routes/: +page.svelte
deploy/local/: wal-listener.yml
docs/: .gitignore  🏠 Home.md
docs/.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins-migration.json  daily-notes.json  hotkeys.json  templates.json  workspace.json
docs/Roadmap/: 0.1.md  Roadmap.md
docs/📝 Concepts/: Audit.md  Id.md  Timestamp.md
docs/🔍 Search/: Entries.md  Tags.md
docs/🗃 Entities/: Entry - WIP.md  Gallery - WIP.md  Group.md  Tag.md  User.md
docs/🗄 Database/: UserDb.md
server/: .editorconfig  Cargo.toml
server/sandbox/: Cargo.toml
server/sandbox/src/: main.rs
server/tei-api/: Cargo.toml
server/tei-api/src/: common.rs  errors.rs  main.rs  tags.rs
server/tei-core/: Cargo.toml
server/tei-core/src/: auxiliary.rs  env.rs  group.rs  lib.rs  tag.rs  user.rs
server/tei-data/: Cargo.toml  refinery.toml
server/tei-data/migrations/: u1__init.sql
server/tei-data/src/: auxiliary.rs  extensions.rs  lib.rs  tags.rs
server/tei-data/tests/: users_test.rs
server/tei-data/tests/common/: mod.rs
server/tei-filter/: Cargo.toml
server/tei-filter/src/: lib.rs  tags.rs
server/tei-hosting/: Cargo.toml
server/tei-hosting/src/: lib.rs
server/tei-indexd/: Cargo.toml
server/tei-indexd/src/: indexer.rs  main.rs  tags.rs
server/tei-mq/: Cargo.toml
server/tei-mq/src/: event.rs  lib.rs  nats_stream.rs  tags.rs
server/tei-threading/: Cargo.toml
server/tei-threading/src/: channel.rs  lib.rs  runtime.rs
