[workspace]
resolver = "2"
members = ["tei-core", "tei-data", "tei-filter", "tei-mq", "sandbox"]

[profile.dev]
debug = false

[workspace.dependencies]
derive_more = "0.99.17"
thiserror = "1.0.50"
itertools = "0.12.0"
uuid = { version = "1.6.1", features = ["v4", "serde"] }

time = "0.3.30"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }
futures = "0.3.29"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"

tokio-postgres = { version = "0.7.10", features = ["with-time-0_3"] }
deadpool-postgres = "0.11.0"

meilisearch-sdk = "0.24.3"
async-nats = "0.33.0"

tokio = { version = "1.34", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

tei-core = { path = "./tei-core" }
tei-data = { path = "./tei-data" }
tei-filter = { path = "./tei-filter" }
tei-mq = { path = "./tei-mq" }
