[workspace]
members = [
    # libs (misc)
    "tei-threading",
    # libs (app)
    "tei-core",
    "tei-data",
    "tei-filter",
    "tei-mq",
    "tei-hosting",
    # applications
    "tei-indexd",
    "tei-api",
    "tei-threading",
]
resolver = "2"

[profile.dev]
debug = false

[workspace.dependencies]
derive_more = "0.99.17"
thiserror = "1.0.50"
itertools = "0.12.0"
uuid = { version = "1.6.1", features = ["v4", "serde"] }

time = { version = "0.3.30", features = ["serde", "formatting"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }
futures = "0.3.29"
dotenvy = "0.15.7"
color-eyre = "0.6.2"
unicase = "2.7.0"
lazy_static = "1.4.0"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

tokio-postgres = { version = "0.7.10", features = ["with-time-0_3"] }
deadpool-postgres = "0.11.0"

meilisearch-sdk = "0.24.3"
async-nats = "0.33.0"

tokio = { version = "1.34", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

tower-http = { version = "0.5.0", features = ["trace"] }
axum = { version = "0.7.1", features = ["tracing"] }

tei-core = { path = "./tei-core" }
tei-data = { path = "./tei-data" }
tei-filter = { path = "./tei-filter" }
tei-mq = { path = "./tei-mq" }
tei-hosting = { path = "./tei-hosting" }
tei-threading = { path = "./tei-threading" }

testcontainers = { version = "0.15.0", features = ["tokio"] }
testcontainers-modules = { version = "0.3.1", features = ["postgres"] }
refinery = { version = "0.8.11", features = ["tokio-postgres"] }
ctor = "0.2.6"
