[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
tei-core = { workspace = true }
tei-data = { workspace = true }
tei-filter = { workspace = true }
tei-mq = { workspace = true }

tokio = { workspace = true }
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }
meilisearch-sdk = { workspace = true }
uuid = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }

tracing-subscriber = { workspace = true }
tracing = { workspace = true }
