[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
tei-core = { workspace = true }
tei-data = { workspace = true }
tei-filter = { workspace = true }
tei-mq = { workspace = true }

tokio = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
dotenvy = { workspace = true }

tracing-subscriber = { workspace = true }
tracing = { workspace = true }
