[package]
name = "tei-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tei-core = { workspace = true }
tei-data = { workspace = true }
tei-filter = { workspace = true }
tei-hosting = { workspace = true }

dotenvy = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
color-eyre = { workspace = true }
itertools = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
unicase = { workspace = true }
lazy_static = { workspace = true }
time = { workspace = true }

deadpool-postgres = { workspace = true }
meilisearch-sdk = { workspace = true }
