[package]
name = "tei-data"
version = "0.1.0"
edition = "2021"

[dependencies]
tei-core = { workspace = true }
tokio-postgres = { workspace = true }
time = { workspace = true }
deadpool-postgres = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
refinery = { workspace = true }
tokio = { workspace = true }
lazy_static = { workspace = true }
tei-threading = { workspace = true }
ctor = { workspace = true }
