[package]
name = "tei-mq"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = { workspace = true }
tei-core = { workspace = true }
serde = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
